--- a/nginx.conf
+++ b/nginx.conf
@@ -1,7 +1,6 @@
 http {
     server {
-        location / {
-            root /home/site/wwwroot/files;
-        }
+        listen 80;
+        root /home/site/wwwroot/data;
     }
 }
