--- a/nginx.conf
+++ b/nginx.conf
@@ -35,7 +35,7 @@ http {
         #access_log  /var/log/nginx/log/host.access.log  main;
 
         location / {
-            root   /home/site/wwwroot;
+            root   /home;
             index  index.html index.htm;
         }
 
